сделана проверка на циклы

--- a/algoritm/lab7/lab7.vcxproj.filters
+++ b/algoritm/lab7/lab7.vcxproj.filters
@@ -18,5 +18,19 @@
     <ClCompile Include="lab7.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\OOP\BoolMatrix\BoolMatrix.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\OOP\BoolVector\BoolVector.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\OOP\BoolMatrix\BoolMatrix.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\OOP\BoolVector\BoolVector.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
